@@ -1,3 +1,7 @@
+2008-01-17  Lawrence Mitchell  <wence@gmx.li>
+
+	* compose.el: New file.  Composition mode for mutt mail messages.
+
 2008-01-15  Lawrence Mitchell  <wence@gmx.li>
 
 	* css-mode.el: Remove file.
